less/widget-gallery.less
//
// Copyright 2014 BaseKit Platform Ltd
//
// -----------------------------
// Gallery Widget
// -----------------------------


// Gallery Layout
// --------------

#page-zones__main > [data-name="widget"] .gallery .gallery-item,
#migrated-site .row:not([data-rowtype^="gallery"]) [data-name="gallery"] .gallery-item {
    padding: 0 10px;
}

.gallery {
    // Gallery List
    .gallery-list {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        margin: 0 auto;
    }
    // Gallery Item
    .gallery-item {
        display: inline-block;
        float: left;
        margin: 0 0 20px;
        position: relative;
        width: 33.3%;
        vertical-align: top;
        @media @tablet {
            width: 50%;
        }
        // Display at 100% at mobile
        @media @mobile {
            margin-right: 0!important;
            width: 100%;
        }
        .image-link {
            .transition( all, 0.5s, ease );
        }
        &:hover {
            figcaption {
                .transition( all, 0.5s, ease );
            }
        }
    }
    .figure {
        .transform(scale(1));
        .transition( all, 0.5s, ease );
        &:hover {
            .transform(scale(1.05));
        }
        .caption-link:hover {
            text-decoration: none;
        }
    }

    // Figcaption
    figcaption {
        display: block;
        .image-title {
            font-family: @font__h4--font-family;
            color: @font-swatch4-color;
            font-size: bkscale(@font__h4--font-size,0.9);
            font-weight: @font__h4--font-weight;
            line-height: bkscale(@font__h4--line-height,0.8);
            padding-bottom: 5px;
        }
        .image-description {
            font-family: @font__p--font-family;
            color: @font-swatch5-color;
            font-size: bkscale(@font__p--font-size,0.76);
            font-weight: @font__p--font-weight;
            line-height: bkscale(@font__p--line-height,0.73);
        }
    }

    // Use Background Image
    .gallery-list .image-link {
        // images on tablet and desktop
        display: block;
        background-repeat: inherit;
        background-position: inherit;
        background-size: inherit;
        background-image: none;
        
        @media @mobile {
            max-height: 200px;
            overflow: hidden;
        }
    }
    
    .image {
        display: block;
        margin: 0 auto;
        width: auto;
    }
}



// Gallery Image Captions
// ----------------------

.gallery .caption {
    display: block;
    margin: 0;
    padding: 15px 5px 0;
}





// Responsive Columns
// ------------------

// Two Columns
.columns-two-left,
.columns-two-right,
// Three Columns
.columns-three-left,
.columns-three-middle,
.columns-three-right,
// Four Columns
.columns-four-first,
.columns-four-second,
.columns-four-third,
.columns-four-fourth {
    .gallery figcaption .image-title {
        font-size: bkscale(@font__h4--font-size,0.8);
        line-height: bkscale(@font__h4--line-height,0.8);
    }
    .gallery figcaption .image-description {
        display: none;
    }
    .gallery .caption {
        padding: 10px;
    }
}

